--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <h1 class="mt-2">Socket Client</h1>
     <hr>
 
-    <script src="./js//socket-client.js"></script>
+    <script src="./socket.io/socket.io.js"></script>
+    <script src="./js/socket-client.js"></script>
 </body>
 
 </html>
