--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,15 @@
     <p>Server Status: <span id="lblOnline" class="text-success">Online</span> <span id="lblOffline"
             class="text-danger">Offline</span></p>
 
+    <div class="row">
+        <div class="col">
+            <input type="text" id="txtMensaje" class="form-control">
+        </div>
+        <div class="col">
+            <button class="btn btn-primary" id="btnEnviar">Enviar</button>
+        </div>
+    </div>
+
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
 </body>
